--- a/CSS/style.css
+++ b/CSS/style.css
@@ -17,7 +17,7 @@
 }
 
 .contact-hd-bg{
-    
+
     margin-top: 20px;
     background-color: rgb(255, 215, 0);
     color: rgb(0, 0, 0);
@@ -33,8 +33,8 @@
 
 .container-contact{
     margin-top: 40px;
-    margin-left: 10%;
-    margin-right: 10%;
+    margin-left: 25%;
+    margin-right: 25%;
     margin-bottom: 30px;
     display: flex;
     
@@ -58,9 +58,16 @@
 .container-land{
     
     text-align: center;
-    font-size: 80px;
+    font-size: 100px;
+    color: rgb(0, 0, 0);
+}
+.container-land-about{
+    
+    text-align: center;
+    font-size: 100px;
     color: rgb(255, 255, 255);
 }
+
 
 .container-land2{
     
@@ -116,6 +123,28 @@
     text-align: justify;
     margin-left: 7%;
     margin-right: 7%;
+    margin-bottom: 2%;
+    margin-top: 2%;
+}
+
+.flex-container-left-text-abt {
+    display: flex;
+    justify-content: flex-start;
+    text-align: justify;
+    margin-left: 7%;
+    margin-right: 7%;
+    font-size: 20px;
+    margin-top: 2%;
+}
+
+.flex-container-left-text-abt2 {
+    display: flex;
+    justify-content: flex-start;
+    text-align: justify;
+    margin-left: 7%;
+    margin-right: 7%;
+    font-size: 17px;
+    margin-top: 2%;
 }
 
 .flex-container-left-abt3 {
