--- a/CSS/style.css
+++ b/CSS/style.css
@@ -33,9 +33,10 @@
 }
 
 .container-contact{
+    align-items: center;
     margin-top: 40px;
-    margin-left: 25%;
-    margin-right: 25%;
+    margin-left: 15%;
+    margin-right: 15%;
     margin-bottom: 30px;
     display: flex;
     
@@ -59,8 +60,9 @@
 .container-land{
     
     text-align: center;
-    font-size: 100px;
+    font-size: 90px;
     color: rgb(0, 0, 0);
+    word-wrap: break-word;
     
 }
 .container-land-about{
@@ -68,6 +70,7 @@
     text-align: center;
     font-size: 100px;
     color: rgb(255, 255, 255);
+    word-wrap: break-word;
 }
 
 
@@ -183,7 +186,7 @@
 
 
 .main-header{
-    font-size: 60px;
+    font-size: 425%;
     margin-bottom: 4px;
 }
 
