--- a/CSS/footer.css
+++ b/CSS/footer.css
@@ -4,14 +4,15 @@
     display: flex;
     flex-wrap: wrap;
     color: white;
+    font-size: 120%;
   }
   
   .column {
     flex-basis: 33.33%;
-    padding: 10px;
+    padding: 2%;
   }
   
-  .column h3 {
+  .column h2 {
     font-size: 18px;
     margin-bottom: 10px;
   }
