--- a/CSS/style.css
+++ b/CSS/style.css
@@ -129,6 +129,15 @@
     align-items: center;
 }
 
+
+.container-main2{
+    display: flex;
+    margin-left: 5%;
+    margin-right: 10%;
+    margin-bottom: 30px;
+    text-align: center;
+    align-items: center;
+}
 .container-news-cards{
     display: flex;
     margin-top: 50px;
@@ -140,6 +149,7 @@
 .container-services-image{
     align-content: center;
     align-items: center;
+    text-align: center;
 }
 
 
