--- a/CSS/style.css
+++ b/CSS/style.css
@@ -79,6 +79,15 @@
 }
 
 
+.container-reg-upload{
+    
+    text-align: center;
+    font-size: 145%;
+    margin-left: 20%;
+    margin-right: 20%;
+    
+}
+
 
 .container-land{
     
