--- a/CSS/style.css
+++ b/CSS/style.css
@@ -167,6 +167,16 @@
     
 }
 
+.container-submit{
+    margin-top: 10%;
+    
+    text-align: center;
+    font-size: 180%;
+    color: rgb(255, 255, 255);
+    word-wrap: break-word;
+    
+}
+
 .container-services-image{
     align-content: center;
     align-items: center;
